# messaging-ai

./: .dockerignore  .env.local  .gitignore  Dockerfile  README.md  alembic.ini  docker-bake.hcl  docker-compose.yaml  pyproject.toml
.github/disabled_workflows/: deploy.yaml
.github/workflows/: ci.yaml  deploy.yaml
scripts/: run_lint.sh  run_tests.sh  update_webhook_url.py
src/: README.md
src/api/: config.py  controller.py  main.py  router.py
src/api/controllers/: app.py  handler.py  webhook.py
src/hygeia/: __init__.py  aio_webhook_handler.py  botconf.py  config.py  main.py  models.py  router.py
src/hygeia/alembic/: env.py
src/hygeia/controllers/: app.py  health_check.py  modify_bot.py  webhook.py
src/hygeia/repositories/: crud.py  init_db.py  init_dynamodb.py
src/hygeia/services/: follow_handler.py  message_handler.py  misc_handler.py  postback_handler.py
src/hygeia/utils/: aio_webhook_handler.py  spread_sheets_exporter.py
src/hygeia/views/: patient_name_selector.py  rich_menu.py
src/hygeia_ai/: config.py  main.py  service_plan_2.py  spread_sheets_exporter.py
src/tests/: conftest.py  test_controller.py
