[tool.poetry]
name = "messaging-to-ai"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "api", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.111.0"}
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
awslambdaric = "^2.0.11"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev]
optional = true

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 99

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.poetry-dynamic-versioning]
enable = true
