[tool.poetry]
name = "messaging-to-ai"
version = "0.0.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    {include = "hygeia", from = "src"},
    {include = "hygeia_ai", from = "src"}
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["standard"], version = "^0.111.0"}
pydantic = "^2.7.3"
pydantic-settings = "^2.3.1"
httpx = "^0.27.0"
line-bot-sdk = "^3.11.0"
python-dotenv = "^1.0.1"
logzero = "^1.7.0"
boto3 = "^1.34.131"
boto3-stubs = "^1.34.131"
sqlmodel = "^0.0.21"
pymysql = "^1.1.1"
mysqlclient = "^2.2.4"
types-mysqlclient = "^2.2.0.20240311"
sqlalchemy = "^2.0.32"
alembic = "^1.13.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.8"
pytest = "^8.2.2"
mypy = "^1.10.0"
pytest-cov = "^5.0.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.ai.dependencies]
openai = "^1.34.0"
langchain = "^0.2.3"
langchain-openai = "^0.1.8"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.ruff]
line-length = 99

[tool.mypy]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

ignore_missing_imports = true


[tool.poetry-dynamic-versioning]
enable = true
